crates/index-scheduler/src/snapshots/lib.rs/test_document_addition_with_set_and_null_primary_key_inference_works/documents.snap
---
source: index-scheduler/src/lib.rs
---
[
  {
    "doggoid": 0,
    "doggo": "jean bob"
  },
  {
    "doggoid": 2,
    "doggo": "jean bob"
  },
  {
    "doggoid": 3,
    "doggo": "jean bob"
  },
  {
    "doggoid": 4,
    "doggo": "jean bob"
  },
  {
    "doggoid": 5,
    "doggo": "jean bob"
  }
]
